// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SYNC Light Devices 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "SimpleLight",
        "itemType": "Switch",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Switch:MySwitch",
        "swVersion": "2.5.0",
      },
      "id": "MySwitch",
      "name": Object {
        "defaultNames": Array [
          "Light Switch",
        ],
        "name": "Light Switch",
        "nicknames": Array [
          "Light Switch",
          "Testlight",
          "Cool Light",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "DimmableLight",
        "itemType": "Dimmer",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Dimmer:MyDimmer",
        "swVersion": "2.5.0",
      },
      "id": "MyDimmer",
      "name": Object {
        "defaultNames": Array [
          "DimmLight",
        ],
        "name": "DimmLight",
        "nicknames": Array [
          "DimmLight",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {
        "colorModel": "hsv",
      },
      "customData": Object {
        "deviceType": "ColorLight",
        "itemType": "Color",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Color:MyLight",
        "swVersion": "2.5.0",
      },
      "id": "MyLight",
      "name": Object {
        "defaultNames": Array [
          "ColorLight",
        ],
        "name": "ColorLight",
        "nicknames": Array [
          "ColorLight",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
        "action.devices.traits.ColorSetting",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "SimpleLight",
        "itemType": "Switch",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Switch:MyLightGroup",
        "swVersion": "2.5.0",
      },
      "id": "MyLightGroup",
      "name": Object {
        "defaultNames": Array [
          "GroupLight",
        ],
        "name": "GroupLight",
        "nicknames": Array [
          "GroupLight",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "DimmableLight",
        "itemType": "Dimmer",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Dimmer:MyDimmerGroup",
        "swVersion": "2.5.0",
      },
      "id": "MyDimmerGroup",
      "name": Object {
        "defaultNames": Array [
          "GroupDimmer",
        ],
        "name": "GroupDimmer",
        "nicknames": Array [
          "GroupDimmer",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {
        "colorModel": "hsv",
      },
      "customData": Object {
        "deviceType": "ColorLight",
        "itemType": "Color",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Color:MyColorGroup",
        "swVersion": "2.5.0",
      },
      "id": "MyColorGroup",
      "name": Object {
        "defaultNames": Array [
          "GroupColor",
        ],
        "name": "GroupColor",
        "nicknames": Array [
          "GroupColor",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
        "action.devices.traits.ColorSetting",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "Fan",
        "itemType": "Dimmer",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Dimmer:MyFan",
        "swVersion": "2.5.0",
      },
      "id": "MyFan",
      "name": Object {
        "defaultNames": Array [
          "Fan",
        ],
        "name": "Fan",
        "nicknames": Array [
          "Fan",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.FanSpeed",
      ],
      "type": "action.devices.types.FAN",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC Scene Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "sceneReversible": true,
      },
      "customData": Object {
        "deviceType": "Scene",
        "itemType": "Switch",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Switch:MyScene",
        "swVersion": "2.5.0",
      },
      "id": "MyScene",
      "name": Object {
        "defaultNames": Array [
          "My Scene",
        ],
        "name": "My Scene",
        "nicknames": Array [
          "My Scene",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.Scene",
      ],
      "type": "action.devices.types.SCENE",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC Sensor Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "sensorStatesSupported": Object {
          "descriptiveCapabilities": Object {
            "availableStates": Array [
              "healthy",
              "moderate",
              "unhealthy",
              "very unhealthy",
            ],
          },
          "name": "AirQuality",
        },
      },
      "customData": Object {
        "deviceType": "Sensor",
        "itemType": "Number",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Number:MySensor",
        "swVersion": "2.5.0",
      },
      "id": "MySensor",
      "name": Object {
        "defaultNames": Array [
          "My Sensor",
        ],
        "name": "My Sensor",
        "nicknames": Array [
          "My Sensor",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.SensorState",
      ],
      "type": "action.devices.types.SENSOR",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC Temperature Sensor Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "queryOnlyTemperatureControl": true,
        "temperatureUnitForUX": "F",
      },
      "customData": Object {
        "deviceType": "TemperatureSensor",
        "itemType": "Number",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Number:MySensor",
        "swVersion": "2.5.0",
      },
      "id": "MySensor",
      "name": Object {
        "defaultNames": Array [
          "My Sensor",
        ],
        "name": "My Sensor",
        "nicknames": Array [
          "My Sensor",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.TemperatureControl",
      ],
      "type": "action.devices.types.SENSOR",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC Thermostat Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "availableThermostatModes": "off,heat,eco,auto",
        "thermostatTemperatureUnit": "C",
      },
      "customData": Object {
        "deviceType": "Thermostat",
        "itemType": "Group",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Group:MyThermostat",
        "swVersion": "2.5.0",
      },
      "id": "MyThermostat",
      "name": Object {
        "defaultNames": Array [
          "My Thermostat",
        ],
        "name": "My Thermostat",
        "nicknames": Array [
          "My Thermostat",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.TemperatureSetting",
      ],
      "type": "action.devices.types.THERMOSTAT",
      "willReportState": false,
    },
  ],
}
`;
